--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "PCAT Photo App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +27,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "method-override": "^3.0.0",
-    "mongoose": "^7.1.0"
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.0"
   }
 }
