--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.2.0"
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1"
   }
 }
